<resources>
    <string name="app_name">timetableRKU</string>
    <string name="your_title">RKU Lecture Schedule</string>
    <string name="no_lecture">NO lecture</string>
    <string name="na">NA</string>

    <string name="slot_sunday">Slot : Sunday</string>
    <string name="link_here">LINK HERE</string>

    <string name="rajkot">Rajkot</string>
    <string name="jj">JJ</string>
    <string name="more_about_rku">More About RKU</string>
    <string name="enjoy">Enjoy!!</string>
    <string name="holiday">Holiday!!</string>

    <string name="its_holiday">its holiday</string>
    <string name="for_login_click_button">For login click Button</string>
    <string name="email">email</string>
    <string name="id">id</string>
    <string name="logout">Logout</string>

    <string name="name">name</string>
    <string name="todo">toto1</string>
    <string name="date">date1</string>
<!--    //<string name="app_name">Navigation_drawer_frag_activity_both</string>-->
    <string name="navigation_draw_open">open navigation drawer</string>
    <string name="navigation_draw_close">close navigation drawer</string>

</resources>